# cpp2pyplot

./: CMakeLists.txt  README.md  requirements.sh
benchmark/: CMakeLists.txt  bench1
build (2)/: CMakeCache.txt  Makefile  cmake_install.cmake
build (2)/benchmark/: Makefile  cmake_install.cmake
build (2)/examples/: Makefile  cmake_install.cmake
build (2)/test/: Makefile  cmake_install.cmake
examples/: CMakeLists.txt
examples/src/: main.cpp
include/cpputility/: datasetBuilder.h  scriptBuilder.h  scriptExecuter.h
include/cpputility/plotting/: plotBuilder.h
include/cpputility/strings/: stringutility.h
python/: setup.py
python/pynetplot/: mytest.py  plotscript.py  readBinaryDataSet.py  readDataSet_test.py
src/: testbinary2string  testbinary2string.cpp
test/: CMakeLists.txt  test11
test/src/: test11.cpp
